# RePlAce

./: .dockerignore  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
bench/: .gitignore
bench/bookshelf/: download_dac2012.sh
bench/lefdef/: download_ispd18.sh
cmake/: FindGoogleHash.cmake  FindMKL.cmake
doc/: BinaryArguments.md  ReportMemoryBug.md  ScriptUsage.md  TclCommands.md
include/replace/: Replace.h
jenkins/: Dockerfile.dev  build.sh  install.sh  test.sh
module/def/5.8-p027/: .gitignore  CMakeLists.txt  Makefile
module/def/5.8-p027/cdef/: defiGroup.h  defiNet.h  defiNonDefault.h  defiPinProp.h  defiPropType.h  defiRegion.h  defiRowTrack.h
module/def/5.8-p027/def/: Makefile  def.y  def_keywords.cpp  defiAlias.cpp  defiAssertion.cpp  defiBlockage.cpp  defiBlockage.hpp  defiComponent.cpp  defiGroup.cpp  defiGroup.hpp  defiKRDefs.hpp  defiMisc.cpp  defiNet.cpp  defiNet.hpp  defiNonDefault.cpp  defiNonDefault.hpp  defiPath.cpp  defiPinCap.cpp  defiPinProp.cpp  defiPinProp.hpp  defiProp.cpp  defiPropType.cpp  defiPropType.hpp  defiRegion.cpp  defiRegion.hpp  defiRowTrack.cpp  defiRowTrack.hpp  defiSite.cpp  defiSlot.cpp  defiVia.cpp  defwWriter.cpp  defwWriterCalls.cpp
module/flute/: .gitignore  CMakeLists.txt
module/flute/src/: Makefile  Readme  dbu.h  dim.h  flute.cpp  flute.h  main.cpp
module/lef/5.8-p027/: .gitignore  CMakeLists.txt  Makefile
module/lef/5.8-p027/lef/: Makefile  lef_keywords.cpp  lefiDebug.cpp  lefiKRDefs.hpp  lefiLayer.cpp  lefiLayer.hpp  lefiMacro.cpp  lefiMacro.hpp  lefiMisc.cpp  lefiNonDefault.cpp  lefiNonDefault.hpp  lefiPropType.cpp  lefiPropType.hpp  lefiUnits.cpp  lefiVia.cpp  lefiViaRule.cpp  lefiViaRule.hpp  lefrReader.cpp  lefrSettings.cpp  lefwWriter.cpp
module/lef/5.8-p027/lefrw/: lefrw.cpp
prerequisite/: install_centos7.sh  install_ubuntu16.sh  install_ubuntu18.sh
src/: .clang-format  .gitignore  InitPlace.cpp  InitPlace.h  MakeReplace.cpp  MakeReplace.h  Makefile  Placer.h  Replace.cpp  argument.cpp  bin.cpp  bin.h  bookShelfIO.cpp  bookShelfIO.h  charge.cpp  charge.h  coordi.cpp  coordi.h  dbLefDefIO.cpp  dbLefDefIO.h  dbLefDefIo.cpp  dbLefDefIo.h  defParser.cpp  detailPlace.cpp  execute_bookshelf.py  execute_lefdef.py  fft.cpp  fft.h  fftsg.cpp  fftsg2d.cpp  fftsg3d.cpp  gcell.cpp  gcell.h  global.h  initPlace.cpp  initPlace.h  initPlacement.cpp  initPlacement.h  initialPlace.cpp  initialPlace.h  (+46 more)
test/: aes_db_test.tcl  aes_test_01.tcl  ar01.def  ar01.defok  ar01.ok  ar01.tcl  ar02.def  ar02.defok  ar02.ok  ar02.tcl  core01.def  core01.defok  core01.ok  core01.tcl  diverge01.defok  diverge01.ok  diverge01.tcl  diverge02.ok  diverge02.tcl  error01.def  error01.ok  error01.tcl  function.sh  gcd_nontd_test.tcl  gcd_td_test.tcl  gcd_test.tcl  gcd_test_01.tcl  incremental01.ok  large01.tcl  large02.tcl  large03.tcl  map9v3.def  medium01.tcl  medium02.tcl  medium03.tcl  medium04.tcl  medium05.tcl  medium06.tcl  osu035_stdcells.lef  regression.py  (+25 more)
test/a2a_wb_dma_top/: contest.db  readme  wb_dma_top_soce.def
test/bookshelf-test/: NangateOpenCellLibrary.lef
test/design/nangate45/aes_cipher_top/: aes_cipher_top.def
test/ispd-test/: run.tcl
test/or-td-test-01/: gcd_2_orig.rpt.ok  gcd_td_test_1.tcl  gcd_td_test_1_orig.tcl  gcd_td_test_2.tcl  gcd_td_test_2_orig.tcl
test/or-td-test-02/: wb_dma_top_1_td.rpt.ok  wb_dma_top_2_td.rpt.ok  wb_td_test_1_orig.tcl  wb_td_test_1_td.tcl  wb_td_test_2_orig.tcl  wb_td_test_2_td.tcl
test/rep-td-test-01/: gcd_1_td.rpt.ok  gcd_td_test_1.tcl  gcd_td_test_1_orig.tcl  gcd_td_test_2.tcl  gcd_td_test_2_orig.tcl
test/rep-td-test-02/: wb_dma_top_2_orig.rpt.ok  wb_td_test_1_orig.tcl  wb_td_test_1_td.tcl  wb_td_test_2_orig.tcl  wb_td_test_2_td.tcl
test/td-test-01/: gcd_td_test_1.tcl  gcd_td_test_1_orig.tcl  gcd_td_test_2.tcl  gcd_td_test_2_orig.tcl
test/td-test-02/: wb_dma_top_1_orig.rpt.ok  wb_td_test_1_orig.tcl  wb_td_test_1_td.tcl  wb_td_test_2_orig.tcl  wb_td_test_2_td.tcl
test/td-test-03/: aes_td_test_1_orig.tcl  aes_td_test_1_td.tcl  aes_td_test_2_orig.tcl  aes_td_test_2_td.tcl
test/testcases/bookshelf-test/: gcd.def
